// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldMessage should render correctly based on the props 1`] = `null`;

exports[`TextFieldMessage should render correctly based on the props 2`] = `
<div
  class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    0 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 3`] = `
<div
  class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 4`] = `
<div
  class="md-text-field-message-container md-full-width md-text--disabled"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some help text
  </div>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 5`] = `
<div
  class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive"
  >
    Some help text
  </div>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 6`] = `
<div
  class="md-text-field-message-container md-full-width md-text--disabled"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some help text
  </div>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 7`] = `
<div
  class="md-text-field-message-container md-full-width md-text--disabled"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some help text
  </div>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 8`] = `
<div
  class="md-text-field-message-container md-full-width md-text--disabled"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some help text
  </div>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 9`] = `
<div
  class="md-text-field-message-container md-full-width md-text--error"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some error text
  </div>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 10`] = `
<div
  class="md-text-field-message-container md-text-field-message-container--left-icon-offset md-full-width md-text--disabled"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some help text
  </div>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 11`] = `
<div
  class="md-text-field-message-container md-text-field-message-container--left-icon-offset md-text-field-message-container--right-icon-offset md-full-width md-text--disabled"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some help text
  </div>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;

exports[`TextFieldMessage should render correctly based on the props 12`] = `
<div
  class="md-text-field-message-container md-text-field-message-container--left-icon-offset md-text--disabled"
>
  <div
    aria-hidden="false"
    class="md-text-field-message md-text-field-message--active"
  >
    Some help text
  </div>
  <div
    aria-hidden="true"
    class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
  >
    2 / 20
  </div>
</div>
`;
